[gd_scene load_steps=19 format=3 uid="uid://bcuyni0ghas6j"]

[ext_resource type="PackedScene" uid="uid://cu2efk6dyqge5" path="res://Utilities/magnetic.tscn" id="1_eso3n"]
[ext_resource type="Script" path="res://Static Objects/button/button.gd" id="1_i58mc"]
[ext_resource type="PackedScene" uid="uid://ccox31ycpy3bo" path="res://Utilities/magnetic_field.tscn" id="2_b6ncd"]
[ext_resource type="Texture2D" uid="uid://su2e1ljs3yul" path="res://Arts/other small things/button_neutral.jpg" id="3_v1ud8"]
[ext_resource type="Script" path="res://Static Objects/button/MeshInstance3D2.gd" id="4_ea3jx"]
[ext_resource type="Texture2D" uid="uid://rqpvjmi6qw6w" path="res://Arts/other small things/button_positive.jpg" id="5_5qcbl"]
[ext_resource type="Texture2D" uid="uid://g3aurtmf1j76" path="res://Arts/other small things/button_negative.jpg" id="6_7k0wr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_muyyx"]
resource_local_to_scene = true
size = Vector3(2, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rfwhx"]
albedo_color = Color(0.101961, 0.101961, 0.101961, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.1

[sub_resource type="BoxMesh" id="BoxMesh_m2qlr"]
resource_local_to_scene = true
lightmap_size_hint = Vector2i(14, 12)
material = SubResource("StandardMaterial3D_rfwhx")
size = Vector3(1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4cn2o"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_v1ud8")
uv1_scale = Vector3(3.095, 2.005, 1)
uv1_offset = Vector3(-1.05, 0, 0)
uv1_triplanar_sharpness = 0.292969
uv2_scale = Vector3(0.48, 0.48, 0.48)
uv2_offset = Vector3(-0.55, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_sfb4y"]
resource_local_to_scene = true
size = Vector3(0.5, 0.099, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_5yhun"]
resource_local_to_scene = true
size = Vector3(2, 0.2, 2)

[sub_resource type="Animation" id="Animation_2ut4a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 0.2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.05, 0)]
}

[sub_resource type="Animation" id="Animation_0d3l8"]
resource_name = "trigger"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 0.203063),
"update": 0,
"values": [Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2, 0.2, 2), Vector3(2, 0.1, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.05, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6fj8i"]
resource_name = "un_trigger"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2, 0.1, 2), Vector3(2, 0.2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.05, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbsi1"]
_data = {
"RESET": SubResource("Animation_2ut4a"),
"trigger": SubResource("Animation_0d3l8"),
"untrigger": SubResource("Animation_6fj8i")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ocqv2"]
resource_local_to_scene = true
size = Vector3(1.9, 0.2, 1.9)

[node name="Button" type="StaticBody3D"]
script = ExtResource("1_i58mc")

[node name="MagneticField" parent="." node_paths=PackedStringArray("magnetic") instance=ExtResource("2_b6ncd")]
magnetic = NodePath("../Magnetic")

[node name="CollisionShape3D" parent="MagneticField" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_muyyx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("BoxMesh_m2qlr")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(3.938, 0, 0, 0, 1.083, 0, 0, 0, 3.912, 0, 0.1, 0)
material_overlay = SubResource("StandardMaterial3D_4cn2o")
mesh = SubResource("BoxMesh_sfb4y")
script = ExtResource("4_ea3jx")
button_positive_texture = ExtResource("5_5qcbl")
button_negative_texture = ExtResource("6_7k0wr")
button_nuetral_texture = ExtResource("3_v1ud8")

[node name="Magnetic" parent="." instance=ExtResource("1_eso3n")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_5yhun")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbsi1")
}

[node name="TriggerArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 11

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_ocqv2")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
light_energy = 0.5
omni_attenuation = 2.0

[connection signal="plority_changed" from="Magnetic" to="MeshInstance3D2" method="_on_magnetic_plority_changed"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_area_3d_body_exited"]

[editable path="MagneticField"]
